mirthWebApp/kubernetes/nextgen-connect-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextgen-connect
  namespace: default
  labels:
    app: nextgen-connect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextgen-connect
  template:
    metadata:
      name: nextgen-connect
      creationTimestamp: null
      labels:
        app: nextgen-connect
    spec:
      containers:
        - resources: {}
          name: nextgen-connect
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
          imagePullPolicy: IfNotPresent
          image: docker.io/nextgenhealthcare/connect
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
