mirthWebApp/kubernetes/nextgen-connect-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextgen-connect
  namespace: default
  labels:
    app: nextgen-connect
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 8443
      targetPort: 8443
  type: ClusterIP
  selector:
    app: nextgen-connect
